# ML_in_business_HW3

./: .gitignore  README.md  hw3_m5_elasticity_forecasting.ipynb  pyproject.toml
src/hw3/: build_notebook.py  pipeline.py
